--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: '3'
 
 services:
   web:
-    image: supriya279/quiz-app-new1:latest
+    image: supriya279/my-flask-app:latest
     ports:
       - "5000:5000"
     restart: always
     environment:
       - FLASK_APP=app.py
-      - FLASK_ENV=development
+      - FLASK_ENV=production
 
   db:
-    image: mysql:latest
+    image: mysql:5.7  # Use a specific MySQL version
     ports:
       - "3306:3306"
     environment:
-      - "MYSQL_ROOT_PASSWORD=test@123"
+      - MYSQL_ROOT_PASSWORD=test@123
 
